[gd_scene load_steps=11 format=2]

[ext_resource path="res://EnemySpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://EnemySpawnerMob.gd" type="Script" id=2]
[ext_resource path="res://levels/Arena.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://tiles/tsdc-tileset-16-walls.tres" type="TileSet" id=5]
[ext_resource path="res://tiles/tsdc-tileset-16.tres" type="TileSet" id=6]
[ext_resource path="res://enemies/EnemyBat.tscn" type="PackedScene" id=7]
[ext_resource path="res://enemies/Jumper/JumperEnemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://enemies/Shooter/ShooterEnemy.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.4717, 58.351 )

[node name="Level" type="YSort"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -100

[node name="Background" type="ColorRect" parent="CanvasLayer"]
show_behind_parent = true
margin_left = -884.0
margin_top = -126.0
margin_right = 2916.0
margin_bottom = 1909.0
mouse_filter = 2
color = Color( 0.894118, 0.823529, 0.666667, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Environment" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -2031447, 0, 0, -131043, 3, 65536, -131042, 3, 327681, -131041, 3, 327681, -131040, 3, 327681, -131039, 3, 7, -65524, 3, 1, -65523, 3, 327681, -65522, 3, 327681, -65521, 3, 327681, -65520, 3, 327681, -65519, 3, 327681, -65518, 3, 327681, -65517, 3, 327681, -65516, 3, 327681, -65515, 3, 327681, -65514, 3, 327681, -65513, 3, 327681, -65512, 3, 327681, -65511, 3, 327681, -65510, 3, 327681, -65509, 3, 327681, -65508, 3, 327681, -65507, 3, 327687, -65502, 3, 1, -65501, 3, 327681, -65500, 3, 327681, -65499, 3, 327681, -65498, 3, 7, 1, 3, 1, 2, 3, 327681, 3, 3, 327681, 4, 3, 327681, 5, 3, 327681, 6, 3, 327681, 7, 3, 327681, 8, 3, 327681, 9, 3, 327681, 10, 3, 327681, 11, 3, 7, 31, 0, 4, 32, 0, 3, 39, 3, 1, 40, 3, 327681, 41, 3, 7, 65536, 3, 196615, 65542, 0, 4, 65543, 0, 3, 65547, 0, 4, 65548, 0, 5, 65549, 0, 6, 65550, 0, 327681, 65551, 0, 327681, 65552, 0, 2, 65553, 0, 5, 65554, 0, 6, 65555, 0, 327681, 65556, 0, 2, 65557, 0, 5, 65558, 0, 5, 65559, 0, 5, 65560, 0, 5, 65561, 0, 5, 65562, 0, 5, 65563, 0, 5, 65564, 0, 6, 65565, 0, 327681, 65566, 0, 327681, 65567, 0, 327682, 65568, 0, 327686, 65569, 0, 327681, 65570, 0, 327681, 65571, 0, 327681, 65572, 0, 327681, 65573, 0, 327681, 65574, 0, 327681, 65575, 0, 327681, 65576, 0, 65543, 65578, 3, 1, 65579, 3, 327681, 65580, 3, 65543, 196607, 3, 65536, 131072, 3, 327687, 131076, 0, 65536, 131077, 0, 327681, 131078, 0, 327682, 131079, 0, 65539, 131080, 0, 5, 131081, 0, 5, 131082, 0, 5, 131083, 0, 65540, 131084, 0, 262149, 131085, 0, 262150, 131088, 0, 327684, 131089, 0, 327685, 131090, 0, 131078, 131092, 0, 196611, 131093, 0, 262149, 131094, 0, 65541, 131095, 0, 65541, 131096, 0, 262149, 131097, 0, 262149, 131098, 0, 65541, 131099, 0, 262149, 131100, 0, 262150, 131112, 0, 327680, 131113, 0, 65543, 131116, 3, 327680, 131117, 3, 65543, 262143, 3, 262151, 196610, 0, 4, 196611, 0, 5, 196612, 0, 196614, 196615, 0, 327684, 196616, 0, 327685, 196617, 0, 262148, 196618, 0, 131076, 196619, 0, 327685, 196620, 0, 327685, 196621, 0, 131078, 196626, 0, 131072, 196627, 0, 5, 196628, 0, 65540, 196629, 0, 131076, 196630, 0, 327685, 196631, 0, 262148, 196632, 0, 262149, 196633, 0, 65541, 196634, 0, 131076, 196635, 0, 327685, 196636, 0, 65539, 196637, 0, 3, 196649, 0, 327680, 196650, 0, 65543, 196653, 3, 262151, 327679, 3, 262151, 262146, 0, 196611, 262147, 0, 131076, 262148, 0, 327683, 262153, 0, 196608, 262154, 0, 327683, 262157, 0, 262144, 262158, 0, 327681, 262159, 0, 327681, 262160, 0, 327681, 262161, 0, 327681, 262162, 0, 327682, 262163, 0, 327685, 262164, 0, 327685, 262165, 0, 131078, 262167, 0, 327684, 262168, 0, 131077, 262169, 0, 327685, 262170, 0, 327683, 262172, 0, 196608, 262173, 0, 327686, 262174, 0, 2, 262175, 0, 3, 262179, 0, 65536, 262180, 0, 327681, 262181, 0, 327681, 262182, 0, 65537, 262183, 0, 327681, 262184, 0, 65543, 262186, 0, 327680, 262187, 0, 65543, 262189, 3, 327680, 262190, 3, 65543, 393215, 3, 262151, 327682, 0, 196611, 327683, 0, 262150, 327688, 0, 4, 327689, 0, 196614, 327693, 0, 262151, 327701, 0, 327680, 327702, 0, 7, 327704, 0, 262151, 327707, 0, 1, 327708, 0, 196610, 327710, 0, 327684, 327711, 0, 196609, 327712, 0, 327681, 327713, 0, 327681, 327714, 0, 327681, 327715, 0, 327687, 327718, 0, 131079, 327720, 0, 131072, 327721, 0, 3, 327723, 0, 262151, 327726, 3, 262151, 458751, 3, 262151, 393217, 0, 4, 393218, 0, 262147, 393219, 0, 327683, 393222, 0, 4, 393223, 0, 6, 393224, 0, 327682, 393225, 0, 65539, 393226, 0, 5, 393227, 0, 5, 393228, 0, 6, 393229, 0, 327687, 393239, 0, 4, 393240, 0, 196613, 393241, 0, 3, 393244, 0, 131072, 393245, 0, 3, 393247, 0, 262151, 393253, 0, 196615, 393256, 0, 327684, 393257, 0, 131078, 393259, 0, 262151, 393262, 3, 262151, 524287, 3, 262151, 458753, 0, 196611, 458754, 0, 262150, 458756, 0, 4, 458757, 0, 5, 458758, 0, 65540, 458759, 0, 262150, 458761, 0, 196611, 458762, 0, 65541, 458763, 0, 65541, 458764, 0, 262150, 458774, 0, 4, 458775, 0, 262147, 458776, 0, 327685, 458777, 0, 65539, 458778, 0, 6, 458779, 0, 327681, 458780, 0, 131075, 458781, 0, 196612, 458782, 0, 5, 458783, 0, 196613, 458784, 0, 3, 458789, 0, 262151, 458793, 0, 262151, 458795, 0, 327680, 458796, 0, 65543, 458798, 3, 262151, 589823, 3, 262151, 524289, 0, 327684, 524290, 0, 65539, 524291, 0, 5, 524292, 0, 65540, 524293, 0, 262149, 524294, 0, 262149, 524295, 0, 196612, 524296, 0, 5, 524297, 0, 65540, 524298, 0, 262149, 524299, 0, 65541, 524300, 0, 262150, 524309, 0, 65536, 524310, 0, 327682, 524311, 0, 327683, 524313, 0, 327684, 524314, 0, 131078, 524316, 0, 327684, 524317, 0, 262148, 524318, 0, 262149, 524319, 0, 65541, 524320, 0, 196612, 524321, 0, 3, 524325, 0, 262151, 524329, 0, 262151, 524332, 0, 262151, 524334, 3, 262151, 655359, 3, 262151, 589826, 0, 196611, 589827, 0, 131076, 589828, 0, 327685, 589829, 0, 262148, 589830, 0, 65541, 589831, 0, 262149, 589832, 0, 65541, 589833, 0, 65541, 589834, 0, 262149, 589835, 0, 131076, 589836, 0, 327686, 589837, 0, 2, 589838, 0, 3, 589844, 0, 4, 589845, 0, 196614, 589850, 0, 262151, 589853, 0, 196611, 589854, 0, 65541, 589855, 0, 262149, 589856, 0, 262149, 589857, 0, 196612, 589858, 0, 6, 589859, 0, 327681, 589860, 0, 2, 589861, 0, 196614, 589865, 0, 262151, 589868, 0, 262151, 589870, 3, 262151, 720895, 3, 262151, 655362, 0, 327684, 655363, 0, 131078, 655365, 0, 196611, 655366, 0, 262149, 655367, 0, 65541, 655368, 0, 262149, 655369, 0, 262149, 655370, 0, 262149, 655371, 0, 262150, 655373, 0, 196611, 655374, 0, 196612, 655375, 0, 5, 655376, 0, 6, 655377, 0, 7, 655380, 0, 196611, 655381, 0, 196612, 655382, 0, 6, 655383, 0, 327681, 655384, 0, 327681, 655385, 0, 327681, 655386, 0, 262145, 655387, 0, 2, 655388, 0, 6, 655389, 0, 327682, 655390, 0, 327685, 655391, 0, 262148, 655392, 0, 262149, 655393, 0, 65541, 655394, 0, 262150, 655396, 0, 196611, 655397, 0, 196612, 655398, 0, 5, 655399, 0, 5, 655400, 0, 5, 655401, 0, 196613, 655402, 0, 6, 655403, 0, 327681, 655404, 0, 196610, 655406, 3, 262151, 786431, 3, 131079, 720899, 0, 262151, 720901, 0, 196611, 720902, 0, 65541, 720903, 0, 262149, 720904, 0, 262149, 720905, 0, 262149, 720906, 0, 65541, 720907, 0, 65542, 720908, 0, 327681, 720909, 0, 327682, 720910, 0, 327685, 720911, 0, 327685, 720912, 0, 131078, 720914, 0, 4, 720915, 0, 5, 720916, 0, 262147, 720917, 0, 327685, 720918, 0, 131078, 720923, 0, 327684, 720924, 0, 131078, 720927, 0, 196611, 720928, 0, 131076, 720929, 0, 327685, 720930, 0, 327686, 720931, 0, 327681, 720932, 0, 131075, 720933, 0, 262149, 720934, 0, 65541, 720935, 0, 65541, 720936, 0, 262149, 720937, 0, 131076, 720938, 0, 327683, 720940, 0, 262151, 720942, 3, 262151, 786432, 3, 196615, 786435, 0, 131072, 786436, 0, 5, 786437, 0, 65540, 786438, 0, 262149, 786439, 0, 65541, 786440, 0, 65541, 786441, 0, 131076, 786442, 0, 327685, 786443, 0, 131078, 786448, 0, 327680, 786449, 0, 2, 786450, 0, 262147, 786451, 0, 327685, 786452, 0, 131078, 786454, 0, 262151, 786460, 0, 262151, 786463, 0, 327684, 786464, 0, 131078, 786468, 0, 196611, 786469, 0, 262149, 786470, 0, 262149, 786471, 0, 262149, 786472, 0, 65541, 786473, 0, 262150, 786475, 0, 65536, 786476, 0, 262145, 786477, 0, 65543, 786478, 3, 262151, 851968, 3, 262151, 851971, 0, 196611, 851972, 0, 262149, 851973, 0, 131076, 851974, 0, 327685, 851975, 0, 327685, 851976, 0, 131077, 851977, 0, 327683, 851979, 0, 131072, 851980, 0, 5, 851981, 0, 5, 851982, 0, 3, 851985, 0, 196608, 851986, 0, 327683, 851988, 0, 327680, 851989, 0, 2, 851990, 0, 196614, 851993, 0, 4, 851994, 0, 5, 851995, 0, 5, 851996, 0, 196613, 851997, 0, 3, 852000, 0, 131072, 852001, 0, 5, 852002, 0, 5, 852003, 0, 5, 852004, 0, 65540, 852005, 0, 65541, 852006, 0, 262149, 852007, 0, 262149, 852008, 0, 131076, 852009, 0, 327686, 852010, 0, 65537, 852011, 0, 327687, 852013, 0, 262151, 852014, 3, 262151, 917504, 3, 262151, 917507, 0, 327684, 917508, 0, 262148, 917509, 0, 262150, 917512, 0, 131079, 917514, 0, 65536, 917515, 0, 327682, 917516, 0, 262148, 917517, 0, 131076, 917518, 0, 327683, 917520, 0, 65536, 917521, 0, 327687, 917525, 0, 196611, 917526, 0, 262150, 917528, 0, 4, 917529, 0, 262147, 917530, 0, 327685, 917531, 0, 327685, 917532, 0, 262148, 917533, 0, 196612, 917534, 0, 5, 917535, 0, 5, 917536, 0, 65540, 917537, 0, 131076, 917538, 0, 327685, 917539, 0, 262148, 917540, 0, 65541, 917541, 0, 65541, 917542, 0, 65541, 917543, 0, 262149, 917544, 0, 262150, 917546, 0, 262151, 917549, 0, 262151, 917550, 3, 262151, 983040, 3, 262151, 983044, 0, 196611, 983045, 0, 262150, 983050, 0, 262151, 983052, 0, 196611, 983053, 0, 262150, 983055, 0, 65536, 983056, 0, 327687, 983061, 0, 196608, 983062, 0, 327683, 983064, 0, 196611, 983065, 0, 262150, 983068, 0, 196611, 983069, 0, 262149, 983070, 0, 262149, 983071, 0, 65541, 983072, 0, 65541, 983073, 0, 262150, 983075, 0, 196611, 983076, 0, 65541, 983077, 0, 65541, 983078, 0, 262149, 983079, 0, 65541, 983080, 0, 196612, 983081, 0, 6, 983082, 0, 327687, 983085, 0, 262151, 983086, 3, 262151, 1048576, 3, 262151, 1048580, 0, 196611, 1048581, 0, 262150, 1048586, 0, 131072, 1048587, 0, 6, 1048588, 0, 327682, 1048589, 0, 65539, 1048590, 0, 6, 1048591, 0, 327687, 1048596, 0, 65536, 1048597, 0, 327687, 1048599, 0, 4, 1048600, 0, 262147, 1048601, 0, 327686, 1048602, 0, 327681, 1048603, 0, 2, 1048604, 0, 65540, 1048605, 0, 65541, 1048606, 0, 262149, 1048607, 0, 262149, 1048608, 0, 65541, 1048609, 0, 196612, 1048610, 0, 5, 1048611, 0, 262147, 1048612, 0, 327685, 1048613, 0, 262148, 1048614, 0, 262149, 1048615, 0, 262149, 1048616, 0, 65541, 1048617, 0, 262150, 1048620, 0, 65536, 1048621, 0, 327687, 1048622, 3, 262151, 1114112, 3, 262151, 1114115, 0, 4, 1114116, 0, 65540, 1114117, 0, 262150, 1114121, 0, 4, 1114122, 0, 65540, 1114123, 0, 262150, 1114125, 0, 327684, 1114126, 0, 131078, 1114131, 0, 65536, 1114132, 0, 327687, 1114135, 0, 196611, 1114136, 0, 262150, 1114139, 0, 196611, 1114140, 0, 262149, 1114141, 0, 262149, 1114142, 0, 262149, 1114143, 0, 262149, 1114144, 0, 262149, 1114145, 0, 65541, 1114146, 0, 262149, 1114147, 0, 262150, 1114149, 0, 196611, 1114150, 0, 262149, 1114151, 0, 262149, 1114152, 0, 262149, 1114153, 0, 262150, 1114155, 0, 65536, 1114156, 0, 327687, 1114158, 3, 262151, 1179648, 3, 131079, 1179651, 0, 196611, 1179652, 0, 262149, 1179653, 0, 262150, 1179656, 0, 65536, 1179657, 0, 327682, 1179658, 0, 327685, 1179659, 0, 131078, 1179662, 0, 262151, 1179667, 0, 262151, 1179670, 0, 4, 1179671, 0, 65540, 1179672, 0, 196612, 1179673, 0, 5, 1179674, 0, 5, 1179675, 0, 65540, 1179676, 0, 262149, 1179677, 0, 65541, 1179678, 0, 65541, 1179679, 0, 262149, 1179680, 0, 65541, 1179681, 0, 262149, 1179682, 0, 65541, 1179683, 0, 196612, 1179684, 0, 5, 1179685, 0, 65540, 1179686, 0, 65541, 1179687, 0, 262149, 1179688, 0, 65541, 1179689, 0, 65542, 1179690, 0, 327681, 1179691, 0, 327687, 1179694, 3, 262151, 1245185, 3, 196615, 1245187, 0, 196611, 1245188, 0, 262149, 1245189, 0, 65542, 1245190, 0, 7, 1245192, 0, 262151, 1245195, 0, 262144, 1245196, 0, 327681, 1245197, 0, 2, 1245198, 0, 196613, 1245199, 0, 3, 1245203, 0, 327680, 1245204, 0, 327681, 1245205, 0, 2, 1245206, 0, 65540, 1245207, 0, 262149, 1245208, 0, 262149, 1245209, 0, 262149, 1245210, 0, 65541, 1245211, 0, 262149, 1245212, 0, 262149, 1245213, 0, 262149, 1245214, 0, 262149, 1245215, 0, 262149, 1245216, 0, 65541, 1245217, 0, 262149, 1245218, 0, 262149, 1245219, 0, 65541, 1245220, 0, 65541, 1245221, 0, 65541, 1245222, 0, 65541, 1245223, 0, 262149, 1245224, 0, 131076, 1245225, 0, 327683, 1245229, 3, 65536, 1245230, 3, 327687, 1310721, 3, 262151, 1310723, 0, 327684, 1310724, 0, 327685, 1310725, 0, 131078, 1310728, 0, 131072, 1310729, 0, 5, 1310730, 0, 5, 1310731, 0, 196614, 1310733, 0, 196611, 1310734, 0, 65541, 1310735, 0, 262150, 1310741, 0, 196611, 1310742, 0, 65541, 1310743, 0, 65541, 1310744, 0, 131076, 1310745, 0, 327685, 1310746, 0, 262148, 1310747, 0, 65541, 1310748, 0, 65541, 1310749, 0, 65541, 1310750, 0, 65541, 1310751, 0, 262149, 1310752, 0, 65541, 1310753, 0, 262149, 1310754, 0, 65541, 1310755, 0, 262149, 1310756, 0, 65541, 1310757, 0, 262149, 1310758, 0, 65541, 1310759, 0, 131076, 1310760, 0, 327683, 1310764, 3, 65536, 1310765, 3, 327687, 1376257, 3, 262151, 1376261, 0, 327680, 1376262, 0, 327681, 1376263, 0, 327681, 1376264, 0, 327682, 1376265, 0, 262148, 1376266, 0, 262149, 1376267, 0, 196612, 1376268, 0, 5, 1376269, 0, 65540, 1376270, 0, 65541, 1376271, 0, 196612, 1376272, 0, 5, 1376273, 0, 3, 1376277, 0, 196611, 1376278, 0, 262149, 1376279, 0, 131076, 1376280, 0, 327683, 1376282, 0, 196611, 1376283, 0, 262149, 1376284, 0, 65541, 1376285, 0, 65541, 1376286, 0, 65541, 1376287, 0, 262149, 1376288, 0, 262149, 1376289, 0, 262149, 1376290, 0, 65541, 1376291, 0, 65541, 1376292, 0, 262149, 1376293, 0, 131076, 1376294, 0, 327685, 1376295, 0, 327683, 1376299, 3, 65536, 1376300, 3, 327687, 1441793, 3, 327680, 1441794, 3, 65543, 1441801, 0, 327684, 1441802, 0, 262148, 1441803, 0, 65541, 1441804, 0, 262149, 1441805, 0, 262149, 1441806, 0, 262149, 1441807, 0, 262149, 1441808, 0, 65541, 1441809, 0, 196612, 1441810, 0, 6, 1441811, 0, 327681, 1441812, 0, 327681, 1441813, 0, 327682, 1441814, 0, 327685, 1441815, 0, 327683, 1441817, 0, 4, 1441818, 0, 65540, 1441819, 0, 65541, 1441820, 0, 262149, 1441821, 0, 262149, 1441822, 0, 65541, 1441823, 0, 262149, 1441824, 0, 262149, 1441825, 0, 262149, 1441826, 0, 262149, 1441827, 0, 262149, 1441828, 0, 131076, 1441829, 0, 327683, 1441834, 3, 65536, 1441835, 3, 327687, 1507330, 3, 131079, 1507338, 0, 196611, 1507339, 0, 262149, 1507340, 0, 262149, 1507341, 0, 262149, 1507342, 0, 65541, 1507343, 0, 65541, 1507344, 0, 131076, 1507345, 0, 327685, 1507346, 0, 327683, 1507353, 0, 327684, 1507354, 0, 262148, 1507355, 0, 65541, 1507356, 0, 131076, 1507357, 0, 327685, 1507358, 0, 262148, 1507359, 0, 65541, 1507360, 0, 65541, 1507361, 0, 262149, 1507362, 0, 131076, 1507363, 0, 327685, 1507364, 0, 327683, 1507368, 3, 65536, 1507369, 3, 327681, 1507370, 3, 327687, 1572867, 3, 196615, 1572874, 0, 327684, 1572875, 0, 327685, 1572876, 0, 327685, 1572877, 0, 327685, 1572878, 0, 327685, 1572879, 0, 327685, 1572880, 0, 131078, 1572883, 0, 4, 1572884, 0, 5, 1572885, 0, 5, 1572886, 0, 5, 1572887, 0, 3, 1572890, 0, 196611, 1572891, 0, 262149, 1572892, 0, 262150, 1572894, 0, 196611, 1572895, 0, 262149, 1572896, 0, 131076, 1572897, 0, 327685, 1572898, 0, 327683, 1572902, 3, 65536, 1572903, 3, 327681, 1572904, 3, 327687, 1638403, 3, 327680, 1638404, 3, 327681, 1638405, 3, 65543, 1638416, 0, 327680, 1638417, 0, 327681, 1638418, 0, 327681, 1638419, 0, 327682, 1638420, 0, 327685, 1638421, 0, 327685, 1638422, 0, 327685, 1638423, 0, 327686, 1638424, 0, 327681, 1638425, 0, 327681, 1638426, 0, 131075, 1638427, 0, 262149, 1638428, 0, 196612, 1638429, 0, 5, 1638430, 0, 262147, 1638431, 0, 327685, 1638432, 0, 327683, 1638437, 3, 1, 1638438, 3, 327687, 1703941, 3, 327680, 1703942, 3, 327681, 1703943, 3, 327681, 1703944, 3, 327681, 1703945, 3, 7, 1703962, 0, 327684, 1703963, 0, 327685, 1703964, 0, 327685, 1703965, 0, 327685, 1703966, 0, 327683, 1703971, 3, 1, 1703972, 3, 7, 1769482, 3, 1, 1769483, 3, 327681, 1769484, 3, 327681, 1769485, 3, 327681, 1769486, 3, 327681, 1769487, 3, 327681, 1769488, 3, 327681, 1769489, 3, 327681, 1769490, 3, 65543, 1769504, 3, 1, 1769505, 3, 327681, 1769506, 3, 7, 1835026, 3, 327680, 1835027, 3, 327681, 1835028, 3, 327681, 1835029, 3, 327681, 1835030, 3, 327681, 1835031, 3, 327681, 1835032, 3, 327681, 1835033, 3, 327681, 1835034, 3, 327681, 1835035, 3, 327681, 1835036, 3, 327681, 1835037, 3, 327681, 1835038, 3, 327681, 1835039, 3, 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Floors" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="EnemySpawner" parent="." instance=ExtResource( 1 )]
position = Vector2( 90, 70 )

[node name="Position2D2" type="Position2D" parent="EnemySpawner/SpawnerLocationList" index="1"]
position = Vector2( 510, 0 )

[node name="Position2D3" type="Position2D" parent="EnemySpawner/SpawnerLocationList" index="2"]
position = Vector2( 275.172, 308.608 )

[node name="SpawnerMob" parent="EnemySpawner/SpawnerMobList" index="0"]
enemy = ExtResource( 7 )
count = 2

[node name="Waves" type="Node" parent="."]

[node name="Wave" type="Node" parent="Waves"]

[node name="EnemySpawnerMob2" type="Node" parent="Waves/Wave"]
script = ExtResource( 2 )
enemy = ExtResource( 7 )
count = 2

[node name="Wave2" type="Node" parent="Waves"]

[node name="EnemySpawnerMob3" type="Node" parent="Waves/Wave2"]
script = ExtResource( 2 )
enemy = ExtResource( 7 )
count = 2

[node name="EnemySpawnerMob4" type="Node" parent="Waves/Wave2"]
script = ExtResource( 2 )
enemy = ExtResource( 8 )
count = 2

[node name="Wave3" type="Node" parent="Waves"]

[node name="EnemySpawnerMob5" type="Node" parent="Waves/Wave3"]
script = ExtResource( 2 )
enemy = ExtResource( 7 )
count = 2

[node name="EnemySpawnerMob6" type="Node" parent="Waves/Wave3"]
script = ExtResource( 2 )
enemy = ExtResource( 8 )
count = 2

[node name="EnemySpawnerMob7" type="Node" parent="Waves/Wave3"]
script = ExtResource( 2 )
enemy = ExtResource( 9 )
count = 2

[node name="Wave4" type="Node" parent="Waves"]

[node name="EnemySpawnerMob5" type="Node" parent="Waves/Wave4"]
script = ExtResource( 2 )
enemy = ExtResource( 7 )
count = 2

[node name="EnemySpawnerMob6" type="Node" parent="Waves/Wave4"]
script = ExtResource( 2 )
enemy = ExtResource( 7 )
count = 2

[node name="EnemySpawnerMob7" type="Node" parent="Waves/Wave4"]
script = ExtResource( 2 )
enemy = ExtResource( 9 )
count = 2

[node name="EnemySpawnerMob8" type="Node" parent="Waves/Wave4"]
script = ExtResource( 2 )
enemy = ExtResource( 8 )
count = 2

[node name="WaveStartButton" type="Node2D" parent="."]
position = Vector2( 360, 200 )

[node name="Sprite" type="Sprite" parent="WaveStartButton"]
scale = Vector2( 0.188858, 0.188858 )
texture = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="WaveStartButton/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WaveStartButton/Sprite/Area2D"]
shape = SubResource( 1 )
[connection signal="all_mobs_defeated" from="EnemySpawner" to="." method="_on_wave_completed"]
[connection signal="input_event" from="WaveStartButton/Sprite/Area2D" to="." method="_on_waveStartButton_selected"]

[editable path="EnemySpawner"]
